--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -34,6 +33,12 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+fieldset {
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 1.2em;
 }
 
 button {
@@ -53,6 +58,20 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+label {
+  margin-right: 0.6em;
+}
+
+input {
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 0.6em 1.2em;
+  margin-right: 0.6em;
+  font-size: 1em;
+  font-weight: 400;
+  font-family: inherit;
 }
 
 @media (prefers-color-scheme: light) {
